<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TextView
            android:id="@+id/tvLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvCurrent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cur"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvMax"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/max"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvMin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/min"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvPrecip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/precipitation"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvDescrip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desc"
            android:textSize="20sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="130dp"
        android:layout_height="34dp"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-black"
        android:hint="@string/loc"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/editTextCity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/editTextCity"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.482" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/weather" />

    <Button
        android:id="@+id/button"
        android:layout_width="267dp"
        android:layout_height="44dp"
        android:layout_marginStart="28pt"
        android:onClick="searchWeather"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextCity"
        android:layout_width="207dp"
        android:layout_height="58dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/city"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

</androidx.constraintlayout.widget.ConstraintLayout>